Properly fix horizontal scrolling on website
Should fix scrolling both on mobile and desktop.

Closes #448

Related #460

--- a/public/global.css
+++ b/public/global.css
@@ -1,3 +1,3 @@
-body {
+#__next {
   overflow-x: hidden;
 }
